--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 <body>
   <header>
     <h1>VYNIX</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="favorit.html">Favorit</a>
-      <a href="notifikasi.html">Notifikasi</a>
-      <a href="nonton.html">Nonton</a>
-      <a href="profil.html">Profil</a>
-      <a href="pengaturan.html">Pengaturan</a>
-      <a href="donasi.html">Donasi</a>
-    </nav>
+    <nav class="nav-menu">
+  <nav>
+  <a href="index.html">Home</a>
+  <a href="favorit.html">Favorit</a>
+  <a href="notifikasi.html">Notifikasi</a>
+  <a href="nonton.html">Nonton</a>
+  <a href="profil.html">Profil</a>
+  <a href="pengaturan.html">Pengaturan</a>
+  <a href="donasi.html">Donasi</a>
+</nav>
   </header>  <main>
     <section class="hero">
       <h2>Trending Film AI Minggu Ini</h2>
