--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-
-<!DOCTYPE html><html lang="id">
+<!-- 1. index.html --><!DOCTYPE html><html lang="id">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,27 +7,24 @@
 </head>
 <body>
   <header>
-    <h1>VYNIX</h1>
-    <div class="top-bar">
-      <nav class="nav-menu">
-        <a href="index.html">Home</a>
-        <a href="favorit.html">Favorit</a>
-        <a href="notifikasi.html">Notifikasi</a>
-        <a href="nonton.html">Nonton</a>
-        <a href="profil.html">Profil</a>
-        <a href="pengaturan.html">Pengaturan</a>
-        <a href="donasi.html">Donasi</a>
-      </nav>
-      <div class="search-top">
-        <input type="text" placeholder="Cari film...">
-      </div>
+    <div class="header-top">
+      <h1>VYNIX</h1>
+      <input type="text" class="search-box" placeholder="Cari film...">
     </div>
+    <nav class="nav-menu">
+      <a href="index.html">Home</a>
+      <a href="favorit.html">Favorit</a>
+      <a href="notifikasi.html">Notifikasi</a>
+      <a href="nonton.html">Nonton</a>
+      <a href="profil.html">Profil</a>
+      <a href="pengaturan.html">Pengaturan</a>
+      <a href="donasi.html">Donasi</a>
+    </nav>
   </header>  <main>
     <section class="hero">
       <h2>Trending Film AI Minggu Ini</h2>
       <div class="trending">
-        <!-- Gambar/poster film besar -->
-        <img src="poster1.jpg" alt="Film Trending">
+        <img src="poster1.jpg" alt="Trending Film" class="trending-img">
       </div>
     </section><section class="genre">
   <h3>Genre</h3>
@@ -37,32 +33,33 @@
     <a href="genre.html">Drama</a>
     <a href="genre.html">Fantasi</a>
     <a href="genre.html">Horor</a>
-    <a href="genre.html">Komedi</a>
     <a href="genre.html">Sci-Fi</a>
-    <a href="genre.html">Thriller</a>
-    <a href="genre.html">Petualangan</a>
+    <a href="genre.html">Romantis</a>
+    <a href="genre.html">Komedi</a>
   </div>
 </section>
 
 <section class="lainnya">
   <h3>Rekomendasi Lainnya</h3>
   <div class="film-list">
-    <div class="film-item"><img src="film1.jpg" alt="Film 1"><p>Judul Film 1</p></div>
-    <div class="film-item"><img src="film2.jpg" alt="Film 2"><p>Judul Film 2</p></div>
-    <div class="film-item"><img src="film3.jpg" alt="Film 3"><p>Judul Film 3</p></div>
-    <div class="film-item"><img src="film4.jpg" alt="Film 4"><p>Judul Film 4</p></div>
-    <div class="film-item"><img src="film5.jpg" alt="Film 5"><p>Judul Film 5</p></div>
-    <div class="film-item"><img src="film6.jpg" alt="Film 6"><p>Judul Film 6</p></div>
-    <div class="film-item"><img src="film7.jpg" alt="Film 7"><p>Judul Film 7</p></div>
+    <div class="film-card"><img src="film1.jpg" alt="Film 1"><p>Film 1</p></div>
+    <div class="film-card"><img src="film2.jpg" alt="Film 2"><p>Film 2</p></div>
+    <div class="film-card"><img src="film3.jpg" alt="Film 3"><p>Film 3</p></div>
+    <div class="film-card"><img src="film4.jpg" alt="Film 4"><p>Film 4</p></div>
+    <div class="film-card"><img src="film5.jpg" alt="Film 5"><p>Film 5</p></div>
+    <div class="film-card"><img src="film6.jpg" alt="Film 6"><p>Film 6</p></div>
+    <div class="film-card"><img src="film7.jpg" alt="Film 7"><p>Film 7</p></div>
   </div>
 </section>
 
   </main>  <footer>
     <div class="footer-menu">
-      <a href="donasi.html">Donasi</a>
-      <a href="tentang.html">Tentang VYNIX</a>
-      <a href="download.html">Download</a>
-      <a href="langganan.html">Langganan</a>
+      <a href="donasi.html" class="btn-footer">Donasi</a>
+      <a href="tentang.html" class="btn-footer">Tentang VYNIX</a>
+      <a href="download.html" class="btn-footer">Download</a>
+      <a href="langganan.html" class="btn-footer">Langganan</a>
     </div>
-  </footer>  <script src="main.js"></script></body>
+  </footer>
+  <script src="main.js"></script>
+</body>
 </html>
