--- a/genre.html
+++ b/genre.html
@@ -1,10 +1,11 @@
+<!-- 8. genre.html -->
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Genre - VYNIX</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>VYNIX - Genre</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -23,29 +24,14 @@
   </header>
 
   <main>
-    <h2 class="section-title">Film Genre: Aksi</h2>
-    <p class="description">Daftar film AI terbaik dari genre Aksi yang sedang trending saat ini.</p>
+    <h2 class="section-title">Genre: Aksi</h2>
 
     <div class="genre-scroll">
-      <!-- Film 1 -->
-      <div>
-        <img src="poster1.jpg" alt="Film 1" class="film-thumbnail" />
-        <p>Judul Film 1</p>
-      </div>
-
-      <!-- Film 2 -->
-      <div>
-        <img src="poster2.jpg" alt="Film 2" class="film-thumbnail" />
-        <p>Judul Film 2</p>
-      </div>
-
-      <!-- Film 3 -->
-      <div>
-        <img src="poster3.jpg" alt="Film 3" class="film-thumbnail" />
-        <p>Judul Film 3</p>
-      </div>
-
-      <!-- Tambahkan lagi jika perlu -->
+      <img src="poster1.jpg" alt="Film 1" class="film-thumbnail" style="width: 150px;">
+      <img src="poster2.jpg" alt="Film 2" class="film-thumbnail" style="width: 150px;">
+      <img src="poster3.jpg" alt="Film 3" class="film-thumbnail" style="width: 150px;">
+      <img src="poster4.jpg" alt="Film 4" class="film-thumbnail" style="width: 150px;">
+      <!-- Tambahkan lagi -->
     </div>
   </main>
 
@@ -55,7 +41,5 @@
     <a href="download.html">Download</a>
     <a href="langganan.html">Langganan</a>
   </footer>
-
-  <script src="main.js"></script>
 </body>
 </html>
