--- a/index.html
+++ b/index.html
@@ -1,56 +1,56 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>VYNIX - Home</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>VYNIX</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <div class="navbar">
-      <h1>VYNIX</h1>
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="favorit.html">Favorit</a>
-        <a href="notifikasi.html">Notifikasi</a>
-        <a href="nonton.html">Nonton</a>
-        <a href="profil.html">Profil</a>
-        <a href="pengaturan.html">Pengaturan</a>
-        <a href="donasi.html">Donasi</a>
-      </nav>
-    </div>
-  </header>
+    <header>
+        <h1>VYNIX</h1>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Favorit</a>
+            <a href="#">Notifikasi</a>
+            <a href="#">Nonton</a>
+            <a href="#">Profil</a>
+        </nav>
+    </header>
 
-  <main>
     <section class="hero">
-      <h2>Trending Film AI Minggu Ini</h2>
+        <div class="hero-content">
+            <h2>Trending Film AI Minggu Ini</h2>
+            <p>Judul Film Besar</p>
+            <button class="watch-now">WATCH NOW</button>
+        </div>
     </section>
 
-    <section class="genre">
-      <h3>Genre</h3>
-      <div class="genre-scroll">
-        <button>Aksi</button>
-        <button>Drama</button>
-        <button>Fantasi</button>
-        <button>Horor</button>
-      </div>
+    <section class="genres">
+        <h3>Genre</h3>
+        <div class="genre-buttons">
+            <button>Aksi</button>
+            <button>Drama</button>
+            <button>Fantasi</button>
+            <button>Horror</button>
+        </div>
     </section>
 
-    <section class="rekomendasi">
-      <h3>Rekomendasi Lainnya</h3>
-      <!-- Tambahkan film di sini -->
+    <section class="movie-grid">
+        <h3>Rekomendasi Lainnya</h3>
+        <div class="movies">
+            <div class="movie-card">Film 1</div>
+            <div class="movie-card">Film 2</div>
+            <div class="movie-card">Film 3</div>
+            <div class="movie-card">Film 4</div>
+        </div>
     </section>
-  </main>
 
-  <footer>
-    <div class="footer-links">
-      <a href="donasi.html">Donasi</a>
-      <a href="tentang.html">Tentang VYNIX</a>
-      <a href="download.html">Download</a>
-      <a href="langganan.html">Langganan</a>
-    </div>
-    <input type="text" placeholder="Cari film..." />
-  </footer>
+    <footer>
+        <a href="#">Donasi</a>
+        <a href="tentang.html">Tentang VYNIX</a>
+        <a href="#">Download</a>
+        <a href="langganan.html">Langganan</a>
+    </footer>
 </body>
 </html>
