--- a/index.html
+++ b/index.html
@@ -10,47 +10,50 @@
     <header>
         <h1>VYNIX</h1>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">Favorit</a>
-            <a href="#">Notifikasi</a>
-            <a href="#">Nonton</a>
-            <a href="#">Profil</a>
+            <button class="nav-btn">Home</button>
+            <button class="nav-btn">Favorit</button>
+            <button class="nav-btn">Notifikasi</button>
+            <button class="nav-btn">Nonton</button>
+            <button class="nav-btn">Profil</button>
         </nav>
     </header>
 
-    <section class="hero">
-        <div class="hero-content">
-            <h2>Trending Film AI Minggu Ini</h2>
-            <p>Judul Film Besar</p>
-            <button class="watch-now">WATCH NOW</button>
-        </div>
-    </section>
+    <main>
+        <section class="hero">
+            <img src="poster-gede.jpg" alt="Poster Film Besar" class="hero-poster">
+            <div class="hero-content">
+                <h2>Trending Film AI Minggu Ini</h2>
+                <h3>Judul Film Besar</h3>
+                <button class="watch-now">WATCH NOW</button>
+            </div>
+        </section>
 
-    <section class="genres">
-        <h3>Genre</h3>
-        <div class="genre-buttons">
-            <button>Aksi</button>
-            <button>Drama</button>
-            <button>Fantasi</button>
-            <button>Horror</button>
-        </div>
-    </section>
+        <section class="genres">
+            <h3>Genre</h3>
+            <div class="genre-buttons">
+                <button class="genre-btn">Aksi</button>
+                <button class="genre-btn">Drama</button>
+                <button class="genre-btn">Fantasi</button>
+                <button class="genre-btn">Horror</button>
+            </div>
+        </section>
 
-    <section class="movie-grid">
-        <h3>Rekomendasi Lainnya</h3>
-        <div class="movies">
-            <div class="movie-card">Film 1</div>
-            <div class="movie-card">Film 2</div>
-            <div class="movie-card">Film 3</div>
-            <div class="movie-card">Film 4</div>
-        </div>
-    </section>
+        <section class="movies">
+            <h3>Rekomendasi Lainnya</h3>
+            <div class="movie-list">
+                <div class="movie-card"><img src="poster-1.jpg" alt="Film 1"></div>
+                <div class="movie-card"><img src="poster-2.jpg" alt="Film 2"></div>
+                <div class="movie-card"><img src="poster-3.jpg" alt="Film 3"></div>
+                <div class="movie-card"><img src="poster-4.jpg" alt="Film 4"></div>
+            </div>
+        </section>
+    </main>
 
     <footer>
-        <a href="#">Donasi</a>
-        <a href="tentang.html">Tentang VYNIX</a>
-        <a href="#">Download</a>
-        <a href="langganan.html">Langganan</a>
+        <button class="footer-btn">Donasi</button>
+        <button class="footer-btn">Tentang VYNIX</button>
+        <button class="footer-btn">Download</button>
+        <button class="footer-btn">Langganan</button>
     </footer>
 </body>
 </html>
